@@ -14,6 +14,8 @@ ikiwiki (3.20120204) UNRELEASED; urgency=low
   * passwordauth: Fix url in password recovery email to be absolute.
   * httpauth: When it's the only auth method, avoid a pointless and
     confusing signin form, and go right to the httpauthurl.
+  * rename: Allow rename to be started not from the edit page; return to
+    the renamed page in this case.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2012 14:33:14 -0400
 
